--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,4 @@ jobs:
                 directory: .
                 file: .env.test
             - name: Rodar os testes
-              run: docker compose -f docker-compose-test.yml up
+              run: docker compose -f docker-compose-test.yml run node npm run test
