--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,5 +15,7 @@ jobs:
                 DATABASE_URL: postgresql://postgres:postgres@mypostgres:5432/projeto_ci
                 directory: .
                 file: .env.test
+            - name: check path
+              run: pwd
             - name: Rodar os testes
               run: docker compose -f docker-compose-test.yml run node npm run test
