--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,19 +3,23 @@ on: [pull_request]
 jobs:
   PullRequest-Github:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Criar um .env.test
-        uses: SpicyPizza/create-envfile@v2.0
-        with:
-          envkey_POSTGRES_PASSWORD: postgres
-          envkey_POSTGRES_USER: postgres
-          envkey_POSTGRES_DB: projeto_ci
-          envkey_DATABASE_URL: postgresql://postgres:postgres@mypostgres:5432/projeto_ci
-          directory: .
-          file: .env.test
-      - name: check path
-        run: pwd
-      - name: Rodar os testes
-        run: docker compose -f docker-compose-test.yml run node npm run test
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Criar um .env.test
+      uses: SpicyPizza/create-envfile@v2.0
+      with:
+        envkey_POSTGRES_PASSWORD: postgres
+        envkey_POSTGRES_USER: postgres
+        envkey_POSTGRES_DB: projeto_ci
+        envkey_DATABASE_URL: postgresql://postgres:postgres@mypostgres:5432/projeto_ci
+        directory: .
+        file_name: .env.test
+
+    - name: check path
+      run: pwd && ls -la
+
+    - name: Rodar os testes
+      run: docker compose -f docker-compose-test.yml run node npm run test
