--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
       run: pwd && ls -la
 
     - name: Rodar os testes
-      run: docker compose -f docker-compose-test.yml up
+      run: docker compose -f docker-compose-test.yml run backend npm run test
